--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity
+            android:name=".activities.GeneralActivity"
+            android:label="@string/title_activity_general"
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
+        <activity android:name=".activities.OffersListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.GeneralActivity"
-            android:label="@string/title_activity_general"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.OffersListActivity"></activity>
     </application>
 
 </manifest>
